# StudyWidgetApp

./: .gitignore  README.md  main.py  pyproject.toml  session_14_report.json  session_28_report.json  study_insights_report.md
.github/: copilot-instructions.md
src/core/: database_reader.py  qApplication.py  settings_manager.py  vision_manager.py
src/experience/: README.md  accessory_catalog.py  achievement_manager.py  button.py  mainWindow.py  main_window.py  petWindow.py  pet_catalog.py  pet_window.py  sideBar.py  side_bar.py  sprite_composer.py
src/experience/pages/: achievements.py  dashboard.py  petWindow.py  report.py  session.py  settings.py  setup.py  virtualPet.py
src/experience/style/: dark.qss  light.qss  theme.qss
src/experience/widgets/: accessory_card.py  achievement_card.py  achievement_catalog.py  ai_insight_widget.py  avgFocusTime.py  avg_focus_time.py  calendar.py  centered_label.py  distraction_chart.py  distraction_list.py  distraction_per_type_fields_panel.py  distraction_toggles.py  duration_format.py  feature_importance_widget.py  focus_trend_chart.py  forecast_chart.py  lifetime_focus.py  (+18 more)
src/intelligence/: activity_monitor.py  database.py  pattern_analysis.py  pet_manager.py  session_feedback.py  session_manager.py
src/vision/: README.md  __init__.py  camera.py  camera_devices.py  iris_tracker.py  menu.py  phone_calibration.py  phone_few_shot_bundle.npz  team_a_branch_plan.md  team_a_recommendations.md  test_calibration_gui.py
tasks/Week 2/: TEAM_A_IRIS_TRACKING.md  TEAM_B_PHONE_DETECTION.md
tasks/Week 3/: TEAM_A_IRIS_TRACKING.md
(+37 files in other folders)
